--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,22 @@
---- #YAML:1.0
-name:               Math-Quaternion
-version:            0.06
-abstract:           Perl class to represent quaternions
+---
+abstract: 'Perl class to represent quaternions'
 author:
-    - Jonathan Chin <jon-quaternion.pm@earth.li>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Jonathan Chin <jon-quaternion.pm@earth.li>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Test::More:  0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Math-Quaternion
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Test::More: 0
+version: 0.07
